# pi_agent_lm

./: .gitignore  AGENTS.md  LICENSE  README.md  SECURITY.md  agent_settings.py  config.example.toml  main.py  pyproject.toml  sensor_logic.py
.agents/rules/: branch-prefix.mdc  config-toml.mdc  python-and-commit-readme.mdc  tests-and-coverage.mdc  uv-cli.mdc
.agents/skills/caveman-commit/: SKILL.md
flow_sensor/: .gitignore  README.md  WATER_SENSOR_README.md  __init__.py  agent_settings.py  config.example.toml  flow_sensor_math.py  mock_water_sensor.py  pyproject.toml  water_sensor.py
scripts/: fetch_gemma_model.py
tests/: conftest.py  test_agent_settings.py  test_flow_sensor_math.py  test_main.py  test_sensor_logic.py
